--- a/watchlist/static/style.css
+++ b/watchlist/static/style.css
@@ -30,6 +30,7 @@ footer {
 .movie-list li {
     padding: 12px 24px;
     border-bottom: 1px solid #ddd;
+    height: 15px;
 }
 
 .movie-list li:last-child {
@@ -69,6 +70,10 @@ nav li a {
 
 nav li a:hover {
     background-color: #111;
+}
+
+.float-left {
+    float: left;
 }
 
 .float-right {
